--- a/.github/workflows/azure-static-web-apps-slorbastaticweb.yml
+++ b/.github/workflows/azure-static-web-apps-slorbastaticweb.yml
@@ -27,8 +27,8 @@ jobs:
           repo_token: ${{ secrets.GITHUB_TOKEN }} # Used for Github integrations (i.e. PR comments)
           action: "upload"
           ###### Repository/Build Configurations ######
-          app_location: "src" # App source code path
-          api_location: "api" # Api source code path - optional
+          app_location: "demo-front/src" # App source code path
+          api_location: "demo-back" # Api source code path - optional
           output_location: "public" # Built app content directory - optional
           ###### End of Repository/Build Configurations ######
 
