--- a/demo-front/package.json
+++ b/demo-front/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo",
+  "name": "demo-front",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +9,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
