--- a/demo-front/package.json
+++ b/demo-front/package.json
@@ -13,8 +13,7 @@
     "react-scripts": "4.0.3",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.4",
-    "web-vitals": "^1.0.1",
-    "webpack": "^5.60.0"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "magic": "webpack",
@@ -42,6 +41,5 @@
     ]
   },
   "devDependencies": {
-    "webpack-cli": "^4.9.1"
   }
 }
