--- a/.github/workflows/azure-static-web-apps-slorbastaticweb.yml
+++ b/.github/workflows/azure-static-web-apps-slorbastaticweb.yml
@@ -31,6 +31,8 @@ jobs:
           api_location: "demo-back" # Api source code path - optional
           output_location: "public" # Built app content directory - optional
           ###### End of Repository/Build Configurations ######
+        env: # Add environment variables here
+          PUBLIX_URL: "https://icy-river-0d35d7e03.azurestaticapps.net"
 
   close_pull_request_job:
     if: github.event_name == 'pull_request' && github.event.action == 'closed'
