--- a/demo-front/package.json
+++ b/demo-front/package.json
@@ -22,7 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "homepage": "/",
+  "homepage": "https://icy-river-0d35d7e03.azurestaticapps.net/",
   "eslintConfig": {
     "extends": [
       "react-app",
