--- a/.github/workflows/azure-static-web-apps-slorbastaticweb.yml
+++ b/.github/workflows/azure-static-web-apps-slorbastaticweb.yml
@@ -29,7 +29,7 @@ jobs:
           ###### Repository/Build Configurations ######
           app_location: "demo-front" # App source code path
           api_location: "demo-back" # Api source code path - optional
-          output_location: "public" # Built app content directory - optional
+          output_location: "build" # Built app content directory - optional
           ###### End of Repository/Build Configurations ######
         env: # Add environment variables here
           PUBLIX_URL: "https://icy-river-0d35d7e03.azurestaticapps.net"
