--- a/demo-front/package.json
+++ b/demo-front/package.json
@@ -11,7 +11,9 @@
     "@types/react": "^18.0.13",
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.3",
